Adding in cleanability

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,7 @@
       steps:
       - name: checkout repo
         uses: actions/checkout@main
-      - name: build application
+      - name: unit_tests
         run: make unit_tests
+      - name: clean
+        run: make clean
