--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ decorator==5.1.1
 deep-translator==1.11.4
 discord==2.3.2
 discord.py==2.3.2
-discord_handler==0.0.5
+discord_logging==1.0.0
 dist-info==0.1.1
 executing==2.0.1
 frozenlist==1.4.1
@@ -32,6 +32,7 @@ pure-eval==0.2.2
 Pygments==2.17.2
 pytest==8.0.1
 python-dotenv==1.0.1
+python-logging-discord-handler==0.1.4
 requests==2.31.0
 six==1.16.0
 soupsieve==2.5
