Fixing up some cli stuff, so that events can talk a little bit for logger level 2, set logger level 2 to default

--- a/disc_bot/config/output_level_2.cfg
+++ b/disc_bot/config/output_level_2.cfg
@@ -60,7 +60,7 @@ qualname=Rank_Commands
 propagate=0
 
 [logger_Events]
-level=INFO
+level=DEBUG
 handlers=discordWebhook
 qualname=Events
 propagate=0
