--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Venv 
+# Venv
 bot_env/
 
 # history
 **/history.json
+disc_bot/server_data/*.json
